--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,15 +1,12 @@
-<!DOCTYPE html PUBLIC>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head>
-    <title>JSF MyFaces 2.2 Template</title>
-</h:head>
-<h:body>
-    <h:form>
-        <h1>Üdvözöljük a MyFaces 2.2 alkalmazásban!</h1>
-        <p>A szerver időpontja: <h:outputText value="#{helloBean.currentTime}" /></p>
-        <h:commandButton value="Frissítés" />
-    </h:form>
-</h:body>
-</html>
+<f:view xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        contracts="default">
+    <ui:composition template="/template.xhtml">
+        <ui:define name="content">
+            <p class="lead">A szerver időpontja: <span class="badge bg-secondary"><h:outputText value="#{helloBean.currentTime}" /></span></p>
+
+        </ui:define>
+    </ui:composition>
+</f:view>
